styles/style.css
.page {
  min-width: 1100px;
  /* we don't know how to make mobile versions of websites yet, */
  /* so here we've set a minimum page width */
  max-width: 1600px;
  /* here we've set a maximum page width */
  margin: 0 auto;
  /* this ensures that all content is centered on screens wider than 1600px */
  font-family: 'Helvetica Neue', Arial, sans-serif;
  color: black;
}

.header {
  height: 100vh;
  min-height: 600px;
  max-height: 756px;
  position: relative;
  background-color: #f2f2f2;
  margin-bottom: 100px;
  display: flex;
}

.logo {
  height: 31px;
  width: 154px;
}

.logo_place_header {
  position: absolute;
  top: 30px;
  left: 64px;
  z-index: 2;
  background: url(../images/logo_place_header.png) no-repeat;
  background-size: contain;
}

.header__title {
  align-self: center;
  max-width: 730px;
  font-weight: bold;
  line-height: 96px;
  font-size: 102px;
  margin: 0 0 0 64px;
  z-index: 1;
}

.header__subtitle {
  max-width: 388px;
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
  position: absolute;
  left: 64px;
  bottom: 30px;
  z-index: 1;
  margin: 0;
}

.header__link {
  color: #2f80ed;
  font-weight: normal;
  text-decoration: none;
}

.header__square-pic {
  background-color: #2f80ed;
  height: 568px;
  width: 568px;
  position: absolute;
  top: 64px;
  right: 0;
  z-index: 0;
}

.header__main-illustration {
  position: absolute;
  object-fit: contain;
  bottom: 0;
  right: 0;
  width: 765px;
  height: 608px;
}

.two-columns{
  display: flex;
  justify-content: space-between;
  min-width: 784px;
  width: 80%;
  font-size: 24px;
  line-height: 34px;
  margin: 0 auto;
}

.two-columns__brief {
  color: #2f80ed;
  width: 175px;
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
}

.two-columns__main-text {
  width: 80%;
  min-width: 784px;
  margin: 0;
}

.two-columns__paragraph {
  font-weight: normal;
  margin: 30px 0 0;
}

.two-columns__paragraph:first-of-type {
  margin: 0;
}

.two-columns__span-accent {
  font-weight: bold;
}

.digits {
  margin: 100px auto 100px;
}
.section__title {
  width: 60%;
  margin: 0;
  padding: 0 20%;
  text-align: center;
  font-weight: bold;
  font-size: 60px;
  line-height: 1.15;
}

.section__subtitle {
  width: 60%;
  margin: 20px 0 0;
  padding: 0 20%;
  text-align: center;
  font-weight: normal;
  font-size: 24px;
  line-height: 34px;
}

.table {
  width: 1100px;
  display: flex;
  margin: 0 auto;
  justify-content: space-between;
  flex-wrap: wrap;
  list-style-type: none;
  padding-left: 0;
}

.table__cell {
  vertical-align: top;
  width: 250px;
  margin-top: 60px;
}

.table__heading {
  font-weight: bold;
  font-size: 24px;
  line-height: 1.15;
  margin: 0;
}

.table__text {
  font-weight: normal;
  font-size: 18px;
  line-height: 1.2;
  margin: 20px 0 0;
}

.feynman {
  background: url(../images/feynman.png) #f2f2f2 no-repeat bottom left;
  background-size: 867px 637px;
  position: relative;
  height: 790px;
  padding-top: 100px;
}

.feynman__title {
  max-width: 775px;
  text-align: center;
  margin: auto;
  font-size: 120px;
  line-height: 1.15;
}

.feynman__subtitle {
  margin: 70px auto auto;
  line-height: 51px;
  font-size: 36px;
  text-align: center;
  font-weight: normal;
}
.feynman__link {
  color: #2f80ed;
  font-weight: normal;
  text-decoration: none;
  position: absolute;
  top: 50%;
  right: 48px;
  line-height: 51px;
  font-size: 36px;
}

.kaufman {
  background-color: #1f1f1f;
  padding-top: 90px;
  padding-bottom: 90px;
  position: relative;
  overflow: hidden;
  z-index: 1;
}

.kaufman__triangle {
  width: 877px;
  height: 877px;
  position: absolute;
  top: 0;
  right: -210px;
  background: url(../images/kaufman-triangle.svg) no-repeat;
  background-size: contain;
  z-index: -1;
  /*Thank you for explaining about giving the whole section a positive z-index in order to create context.
    I had tried before to give the triangle a negative value many times, but since i hadn't given it context
    properly, it kept dissapearing behind the background!*/
}

.section__title_theme_dark {
  color: white;
}

.section__subtitle_theme_dark {
  color: white;
}

.table_theme_dark {
  color: white;
  }

.table__cell_theme_dark {
  margin-top: 80px;
  width: 200px;
  /*z-index was not inheriting until i set it to manually*/
  z-index: inherit;
}

.footer {
  background-color: #1f1f1f;
  display: flex;
  flex-basis: 711px;
  color: white;
  min-height: 350px;
  padding: 60px 0 40px;
  box-sizing: border-box;
}

.footer__columns {
  width: 90%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 0 auto;
}

.footer__column_content_copyright {
  display: flex;
  justify-content: space-between;
  flex-basis: 711px;
  justify-self: flex-start;
  flex-direction: column;
}

.logo_place_footer {
  width: 183px;
  height: 35px;
  background: url(../images/logo_place_footer.png) no-repeat;
  background-size: contain;
}

.footer__author {
  margin: 18px 0;
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
}

.footer__column-heading {
  line-height: 45px;
  font-size: 18px;
  font-weight: bold;
  margin: 0;
}

.footer__column-links {
  list-style-type: none;
  margin: 20px 0 16px;
  padding-left: 0;
}

.footer__link {
  color: white;
  text-decoration: none;
  line-height: 30px;
  font-size: 18px;
  font-weight: normal;
}

.footer__social-icon {
  width: 16px;
  height: 16px;
  margin-right: 10px;
}

